--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <!-- connect the js file in the html -->
-  <script></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <script src="exercise.js"></script>
+    <p>This is a javascript message</p>
+    <p id="example"></p>
+    <!--<button type="button" onclick="usr()">Try it</button>-->
+  </body>
 </html>
